# kubediag

./: Cargo.toml
src/: deployment_status.rs  main.rs  templates.rs
templates/: index.html
