[package]
name = "kubediag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
anyhow = "1.0.80"
k8s-openapi = { version = "0.21.1", features = ["v1_27"] }
kube = "0.88.1"
lazy_static = "1.4.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
tera = "1.19.1"
tokio = { version = "1.36.0", features = ["full"] }
